Fix module loading